--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -4,7 +4,9 @@
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
 
-  --vt-c-black: #8a8686;
+  /* background color*/
+  --vt-c-black: #1b665c;
+
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
 
